horizontal scrollbar fix

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+.row {
+    margin: 0px;
+}
 .block-promo {
     padding: 50px;
 }
